[package]
name = "mdbook-godbolt"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"

authors = ["Tyler Swann <oraqlle.net@gmail.com>"]
description = "A preprocessor for mdbook to add runnable code snippets via Godbolt"
repository = "https://github.com/oraqlle/mdbook-godbolt"

license = "MIT"
keywords = ["mdbook", "markdown", "godbolt", "playground"]
readme = "README.md"

[[bin]]
name = "mdbook-godbolt"
path = "src/mdbook-godbolt.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
mdbook = "0.4.40"
pulldown-cmark = { version = "0.12.2", default-features = false }
pulldown-cmark-to-cmark = "18.0.0"
semver = "1.0.24"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

