[package]
name = "mdbook-godbolt"
version = "0.1.1"
edition = "2021"
rust-version = "1.84.0"

authors = ["Tyler Swann <oraqlle.net@gmail.com>"]
description = "A preprocessor for mdbook to add runnable code snippets via Godbolt"
repository = "https://github.com/oraqlle/mdbook-godbolt"

license = "MIT"
keywords = ["mdbook", "markdown", "godbolt", "playground"]
readme = "README.md"

exclude = [
    "godbolt-info/*",
    "example/*"
]

[[bin]]
name = "mdbook-godbolt"
path = "src/mdbook-godbolt.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
mdbook = "0.4.52"
pulldown-cmark = "0.12.2"
semver = "1.0.25"
serde_json = "1.0.117"
toml_edit = "0.22.23"

